--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "vue-flatpickr-component": "^11.0.5",
+    "vue-router": "^4.2.5",
+    "vue3-datepicker": "^0.4.0",
+    "vuetify": "^3.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "cypress": "^13.7.3",
     "vite": "^5.0.0"
   }
 }
